@@ -3,6 +3,8 @@ package pl.asie.endernet.block;
 import cpw.mods.fml.relauncher.Side;
 import cpw.mods.fml.relauncher.SideOnly;
 import pl.asie.endernet.EnderNet;
+import powercrystals.minefactoryreloaded.api.rednet.RedNetConnectionType;
+import mods.immibis.redlogic.api.wiring.IBundledUpdatable;
 import net.minecraft.block.Block;
 import net.minecraft.block.BlockContainer;
 import net.minecraft.block.material.Material;
@@ -12,8 +14,9 @@ import net.minecraft.entity.player.EntityPlayer;
 import net.minecraft.tileentity.TileEntity;
 import net.minecraft.util.Icon;
 import net.minecraft.world.World;
+import net.minecraftforge.common.ForgeDirection;
 
-public class BlockEnderTransmitter extends BlockEnder {
+public class BlockEnderTransmitter extends BlockEnder{
 	private Icon iconTop, iconSide;
 	
 	public BlockEnderTransmitter(int id) {
@@ -47,11 +50,26 @@ public class BlockEnderTransmitter extends BlockEnder {
 		iconSide = reg.registerIcon("endernet:ender_transmitter_side");
 	}
 	
-	@Override
-    public void onNeighborBlockChange(World world, int x, int y, int z, int side) {
-		int value = this.getRedstoneValue(world, x, y, z);
+	private void setRedstone(World world, int x, int y, int z, int value) {
 		TileEntity entity = world.getBlockTileEntity(x, y, z);
 		if(!(entity instanceof TileEntityEnderTransmitter)) return;
 		((TileEntityEnderTransmitter)entity).sendRedstone(value);
+	}
+	
+	@Override
+    public void onNeighborBlockChange(World world, int x, int y, int z, int side) {
+		setRedstone(world, x, y, z, this.getRedstoneValue(world, x, y, z));
+	}
+	
+	@Override
+	public RedNetConnectionType getConnectionType(World world, int x, int y,
+			int z, ForgeDirection side) {
+		return RedNetConnectionType.CableSingle;
+	}
+	
+	@Override
+	public void onInputChanged(World world, int x, int y, int z,
+			ForgeDirection side, int inputValue) {
+		setRedstone(world, x, y, z, inputValue);
 	}
 }
