@@ -1,4 +1,6 @@
 beta7:
++ Ender Transmitters and Receivers now send MFR RedNet information (single channel). Woo!
++ Ender Transmitters and Receivers now send RedLogic bundled cable information (yes, you can exchange it with MFR). Wooooo!
 + Add a proper localization system!
 + Add a Polish translation!
 + Allow you to change the chat message format completely. See chat.messageFormat and the EnderNet website for more details.
